--- a/speeding/Base.lproj/Main.storyboard
+++ b/speeding/Base.lproj/Main.storyboard
@@ -67,7 +67,7 @@
                                             <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <connections>
                                                 <action selector="shareTapped:" destination="BYZ-38-t0r" id="Vqi-aV-oGk"/>
-                                                <segue destination="VtK-KQ-Tah" kind="show" id="k6Q-eY-1D6"/>
+                                                <segue destination="VtK-KQ-Tah" kind="presentation" id="k6Q-eY-1D6"/>
                                             </connections>
                                         </barButtonItem>
                                         <barButtonItem key="rightBarButtonItem" image="Settings-30" id="K4n-2R-Sn3">
@@ -117,80 +117,6 @@
             <point key="canvasLocation" x="401" y="675"/>
         </scene>
         <!--Title-->
-        <scene sceneID="oRt-4g-rjv">
-            <objects>
-                <tableViewController id="pDq-fe-zlc" customClass="LogTableViewController" customModule="speeding" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="1Pp-dQ-lkP">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <navigationBar key="tableHeaderView" contentMode="scaleToFill" barStyle="black" id="w1Y-gh-but">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <items>
-                                <navigationItem id="E8y-VD-pCG">
-                                    <nil key="title"/>
-                                    <barButtonItem key="leftBarButtonItem" systemItem="action" id="P1P-t0-nfS">
-                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <connections>
-                                            <action selector="shareTapped:" destination="pDq-fe-zlc" id="60V-5W-8It"/>
-                                        </connections>
-                                    </barButtonItem>
-                                    <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="d5C-M5-tho">
-                                        <rect key="frame" x="124.5" y="7" width="165" height="30"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <segments>
-                                            <segment title="Speed"/>
-                                            <segment title="Audio"/>
-                                        </segments>
-                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <connections>
-                                            <action selector="segmentChanged:" destination="pDq-fe-zlc" eventType="valueChanged" id="b5e-Un-ddp"/>
-                                        </connections>
-                                    </segmentedControl>
-                                    <barButtonItem key="rightBarButtonItem" systemItem="done" id="rfR-KD-I3h">
-                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <connections>
-                                            <action selector="doneTapped:" destination="pDq-fe-zlc" id="k3Z-z7-oZF"/>
-                                        </connections>
-                                    </barButtonItem>
-                                </navigationItem>
-                            </items>
-                        </navigationBar>
-                        <view key="tableFooterView" contentMode="scaleToFill" id="Wzj-Te-qAd">
-                            <rect key="frame" x="0.0" y="116" width="414" height="44"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        </view>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="logIdentifier" id="B1U-mX-9eK">
-                                <rect key="frame" x="0.0" y="72" width="414" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="B1U-mX-9eK" id="1Pg-C4-nmL">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </tableViewCellContentView>
-                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="pDq-fe-zlc" id="c39-dc-Z67"/>
-                            <outlet property="delegate" destination="pDq-fe-zlc" id="vBp-vc-9Gi"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Title" id="IfT-Db-WZl"/>
-                    <connections>
-                        <outlet property="segmentOutlet" destination="d5C-M5-tho" id="fXN-z4-y33"/>
-                    </connections>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="phY-6G-O2N" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-370" y="1347"/>
-        </scene>
-        <!--Title-->
         <scene sceneID="xFh-CH-He0">
             <objects>
                 <viewController id="VtK-KQ-Tah" customClass="LogViewController" customModule="speeding" customModuleProvider="target" sceneMemberID="viewController">
@@ -214,11 +140,12 @@
                                             </connections>
                                         </barButtonItem>
                                         <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="9xe-3F-Add">
-                                            <rect key="frame" x="124.5" y="7.5" width="165" height="29"/>
+                                            <rect key="frame" x="89.5" y="7" width="235" height="30"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <segments>
                                                 <segment title="Speed"/>
                                                 <segment title="Audio"/>
+                                                <segment title="Video"/>
                                             </segments>
                                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <connections>
@@ -227,6 +154,9 @@
                                         </segmentedControl>
                                         <barButtonItem key="rightBarButtonItem" systemItem="done" id="P1x-nY-FzD">
                                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <connections>
+                                                <action selector="doneTapped:" destination="VtK-KQ-Tah" id="n6C-fA-jrM"/>
+                                            </connections>
                                         </barButtonItem>
                                     </navigationItem>
                                 </items>
@@ -239,6 +169,9 @@
                                         <state key="normal" title="Play">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="playTapped:" destination="VtK-KQ-Tah" eventType="touchUpInside" id="6XX-xg-rr1"/>
+                                        </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fpe-L9-oji">
                                         <rect key="frame" x="360" y="27" width="46" height="21"/>
@@ -267,7 +200,7 @@
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Y1V-5k-JDc">
                                 <rect key="frame" x="0.0" y="88" width="414" height="707"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="logIdentifier" id="fhp-Qc-hxp">
                                         <rect key="frame" x="0.0" y="28" width="414" height="44"/>
@@ -276,6 +209,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
@@ -284,7 +218,7 @@
                                 </connections>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="lmx-YF-1nw" firstAttribute="top" secondItem="pLR-pc-KWo" secondAttribute="bottom" id="83s-b1-51f"/>
                             <constraint firstAttribute="trailing" secondItem="Y1V-5k-JDc" secondAttribute="trailing" id="IPW-4v-WhG"/>
@@ -300,9 +234,12 @@
                     </view>
                     <navigationItem key="navigationItem" title="Title" id="bge-wk-3xh"/>
                     <connections>
+                        <outlet property="playButton" destination="4UT-id-ksO" id="m2Q-hZ-Gn3"/>
+                        <outlet property="playerView" destination="ueE-Qo-1Ds" id="u9f-ev-pBW"/>
                         <outlet property="segmentOutlet" destination="9xe-3F-Add" id="CmW-lK-5zU"/>
                         <outlet property="sliderOutlet" destination="qCG-d3-1Rj" id="FUh-yA-yBp"/>
                         <outlet property="tableView" destination="Y1V-5k-JDc" id="Lj9-Zg-C4l"/>
+                        <outlet property="timeStamp" destination="fpe-L9-oji" id="acY-1l-Bay"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NTk-aY-4Ny" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -510,6 +447,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Settings-30" width="60" height="60"/>
+        <image name="Settings-30" width="30" height="30"/>
     </resources>
 </document>
